# dh-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  Oops.rej  README.md  context  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: release-notes.md
.github/workflows/: ci.yml  embedding-quality.yml  nightly-smoke.yml  release-and-smoke.yml
docs/: DEPRECATION-go-core.md  PLAN-ai-sdk-provider.md  PLAN-provider-opencode-clone.md  PLAN-quick-task-slice.md  PLAN-rust-migration.md  PLAN-rust-runtime-wiring.md  README.md  changelog-policy.md  current-state-snapshot-2026-04-13.md  homebrew.md  privacy-and-local-data.md  project-architecture.md  structure.md  troubleshooting.md  user-guide.md
docs/adr/: 2026-04-05-fork-provenance-strategy.md  2026-04-05-phase15-release-packaging-contract.md  2026-04-13-operator-safe-worktree-wrapper-no-go-dh.md  2026-05-10-personal-coding-assistant-direction.md  2026-05-10-web-desktop-parity-decision.md
docs/architecture/: agent-contracts.md  ai-code-understanding-structural-techniques.md  dh-code-understanding-principles-reference.md  implementation-roadmap.md  implementation-sequence.md  indexing-model.md  model-routing-and-agent-config.md  opencode-integration-decision.md  opencode-sdk-runtime-bridge-checklist.md  opencode-upstream-update-plan.md  openkit-reuse-dh-runtime-integration-checklist.md  (+9 more)
release-notes/: linux-macos-runtime-hardening-rc.md
rust-engine/: Cargo.toml
rust-engine/crates/dh-engine/: Cargo.toml
rust-engine/crates/dh-engine/src/: benchmark.rs  bridge.rs  bridge.rs.orig  bridge.rs.rej  hooks.rs  host_commands.rs  host_lifecycle.rs  main.rs  runtime_launch.rs  session_manager.rs  worker_protocol.rs  worker_supervisor.rs
rust-engine/crates/dh-engine/tests/: benchmark_cli_test.rs  host_contract_cli_test.rs
rust-engine/crates/dh-graph/: Cargo.toml
rust-engine/crates/dh-graph/src/: lib.rs
rust-engine/crates/dh-indexer/: Cargo.toml
rust-engine/crates/dh-indexer/src/: dirty.rs  embedding.rs  hasher.rs  lib.rs  linker.rs  parity.rs  scanner.rs
rust-engine/crates/dh-indexer/tests/: integration_test.rs  linker_test.rs  parity_harness_test.rs
rust-engine/crates/dh-indexer/tests/fixtures/: parity-report.json
rust-engine/crates/dh-indexer/tests/fixtures/parity/: class-methods.ts  dynamic-import.ts  imports-and-exports.ts  simple-module.ts  syntax-error.ts
rust-engine/crates/dh-indexer/tests/fixtures/parity-baselines/: class-methods.ts.json  dynamic-import.ts.json  imports-and-exports.ts.json  simple-module.ts.json  syntax-error.ts.json
rust-engine/crates/dh-parser/: Cargo.toml
rust-engine/crates/dh-parser/src/: lib.rs  module_resolver.rs  pool.rs  registry.rs
rust-engine/crates/dh-parser/src/adapters/: common.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
rust-engine/crates/dh-parser/tests/: module_resolver_test.rs  multi_language_adapters.rs  typescript_adapter.rs
rust-engine/crates/dh-parser/tests/fixtures/: sample.ts
rust-engine/crates/dh-query/: Cargo.toml
rust-engine/crates/dh-query/src/: lib.rs
rust-engine/crates/dh-storage/: Cargo.toml
rust-engine/crates/dh-storage/src/: lib.rs
rust-engine/crates/dh-types/: Cargo.toml
rust-engine/crates/dh-types/src/: lib.rs
scripts/: build-cli-bundle.sh  build-worker-bundle.sh  check-doctor-snapshot.mjs  checksum-from-sha256s.sh  generate-changelog.sh  generate-homebrew-formula.sh  install-dev-tools.sh  install-from-release.sh  install-github-release.sh  install.sh  package-release.sh  resolve-release-binary.sh  sign-release.sh  staging-e2e-smoke.sh  test-installers.sh  uninstall.sh  update-changelog.sh  upgrade-from-release.sh  upgrade-github-release.sh  upgrade.sh  verify-release-artifacts.sh
tests/: closeout-summary-issue-filter.test.mjs
(+375 files in other folders)
