[workspace]
members = [
  "crates/dh-types",
  "crates/dh-storage",
  "crates/dh-parser",
  "crates/dh-indexer",
  "crates/dh-graph",
  "crates/dh-query",
  "crates/dh-engine",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
clap = { version = "4", features = ["derive"] }
blake3 = "1"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
