[package]
name = "dh-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dh-indexer = { path = "../dh-indexer" }
dh-parser = { path = "../dh-parser" }
dh-storage = { path = "../dh-storage" }
dh-types = { path = "../dh-types" }
dh-graph = { path = "../dh-graph" }
dh-query = { path = "../dh-query" }
serde_json.workspace = true
rmp-serde.workspace = true
serde.workspace = true
sha2.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
