[package]
name = "dh-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
dh-parser = { path = "../dh-parser" }
dh-storage = { path = "../dh-storage" }
dh-types = { path = "../dh-types" }
ignore = "0.4"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
