[package]
name = "dh-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tracing.workspace = true
dh-types = { path = "../dh-types" }
sqlite-vec.workspace = true

[dev-dependencies]
tempfile = "3"
